Adding first attempt for a game landscape is achieved by a simple gauss implemented the pallete

--- a/Code/JamTemplate.csproj
+++ b/Code/JamTemplate.csproj
@@ -52,6 +52,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Game.cs" />
+    <Compile Include="GameProperties.cs" />
+    <Compile Include="Landscape.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
